--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Note Taker</title>
+    <title>My Notey</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css"
@@ -20,8 +20,9 @@
 
   <body>
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="/">Note Taker </a>
+      <a class="navbar-brand" href="/">My Notey </a>
       <div class="icons">
+        <a class="navbar-brand" href="./index.html"><i class="fas fa-home text-light home"></i></a>
         <i class="fas fa-save text-light save-note"></i>
         <i class="fas fa-plus text-light new-note"></i>
       </div>
