added a path and send file

--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand" href="/">My Notey </a>
       <div class="icons">
-        <a class="navbar-brand" href="./index.html"><i class="fas fa-home text-light home"></i></a>
+        <a class="home" href="./index.html"><i class="fas fa-home text-light home"></i></a>
         <i class="fas fa-save text-light save-note"></i>
         <i class="fas fa-plus text-light new-note"></i>
       </div>
