--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -12,9 +12,14 @@
 
 <body>
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">My Notey
-    </a>
+    <a class="navbar-brand" href="/">My Notey </a>
+    <div class="icons">
+      <a class="navbar-brand" href="./index.html"><i class="fas fa-home text-light home"></i></a>
+      <i class="fas fa-save text-light save-note"></i>
+      <i class="fas fa-plus text-light new-note"></i>
+    </div>
   </nav>
+
   <div class="container">
     <div style="margin-top: 80px;" class="jumbotron text-center">
       <h1 class="display-4">My Notey <span role="img" aria-label="Memo">📝</span></h1>
