added routes folder and files

--- a/Develop/public/sendFile.html
+++ b/Develop/public/sendFile.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Express Demo</title>
+    <title>My Notey</title>
 
-    <link rel="stylesheet" href="jass.css" />
+    <link rel="stylesheet" href="/Develop/public/assets/css/styles.css" />
     <style>
       body {
         padding-top: 50px;
