--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -1,34 +1,35 @@
-<!-- A landing page with a link to a notes page -->
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>My Notey</title>
+  <title>Take Notes</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
 </head>
 
 <body>
+  
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">My Notey </a>
-    <div class="icons">
-      <a class="fas fa-home" href="./index.html"><i class="fas fa-home text-light home"></i></a>
-      <i class="fas fa-save text-light save-note"></i>
-      <i class="fas fa-plus text-light new-note"></i>
-    </div>
+    <a class="navbar-brand" href="/">Take Notes
+    </a>
+      <div class="icons">
+        <a class="fas fa-home" href="./index.html"><i class="fas fa-home text-light home"></i></a>
+        <i class="fas fa-save text-light save-note"></i>
+        <i class="fas fa-plus text-light new-note"></i>
+      </div>
   </nav>
-
   <div class="container">
     <div style="margin-top: 80px;" class="jumbotron text-center">
-      <h1 class="display-4">My Notey <span role="img" aria-label="Memo">📝</span></h1>
+      <h1 class="display-4">Take Notes <span role="img" aria-label="Memo">📝</span></h1>
       <h4 class="mt-4">Take notes with Express</h4>
-      <!-- Link to notes page -->
-      <a class="btn btn-primary btn-lg mt-4" href="./notes.html" role="button">Get Started</a> 
+      <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
     </div>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/assets/js/index.js"></script>
+  <script src="/reload/reload.js"></script>
 </body>
 
 </html>
