--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -15,7 +15,7 @@
     <a class="navbar-brand" href="/">Take Notes
     </a>
       <div class="icons">
-        <a class="fas fa-home" href="./index.html"><i class="fas fa-home text-light home"></i></a>
+        <a href="./index.html"><i class="fas fa-home text-light home"></i></a>
         <i class="fas fa-save text-light save-note"></i>
         <i class="fas fa-plus text-light new-note"></i>
       </div>
